# Game

./: .clang-format  CMakeLists.txt  README.md  resources.qrc
.github/workflows/: build.yml
assets/translations/: en.ts  ru.ts
include/: Creature.h  Enemy.h  GameObject.h  GameWindow.h  Model.h  MovableObject.h  PassiveUpgrade.h  Player.h  SimpleEnemy.h  View.h  Wave.h
include/Graphics/: AnimationManager.h  HpBar.h  KillCounter.h  MenuScene.h  PlayerHUD.h  UpgradeMenu.h  UpgradeOption.h  XpBar.h
include/Objects/: AbstractPlayer.h  Creature.h  Enemy.h  GameObject.h  Item.h  MovableObject.h  Player.h  Projectile.h  XpItem.h
include/Upgrades/: Knife.h  Lightning.h  Missile.h  PassiveUpgrade.h  Upgrade.h  Weapon.h  Whip.h
json/: enemies.json  waves.json
src/: Creature.cpp  Enemy.cpp  GameObject.cpp  GameWindow.cpp  Missile.cpp  Model.cpp  MovableObject.cpp  PassiveUpgrade.cpp  Player.cpp  Projectile.cpp  SimpleEnemy.cpp  View.cpp  main.cpp
src/Graphics/: AnimationManager.cpp  HpBar.cpp  KillCounter.cpp  MenuScene.cpp  PlayerHUD.cpp  UpgradeMenu.cpp  UpgradeOption.cpp  XpBar.cpp
src/Objects/: AbstractPlayer.cpp  Creature.cpp  Enemy.cpp  Item.cpp  MovableObject.cpp  Player.cpp  Projectile.cpp  SimpleEnemy.cpp  XpItem.cpp
src/Upgrades/: Knife.cpp  Lightning.cpp  Missile.cpp  PassiveUpgrade.cpp  Weapon.cpp  Whip.cpp
